samples/_failures_safe/1761494951_856f57_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc9c26e6.c: In function ‘main’:
./samples/SAFE/__tmp_cc9c26e6.c:153:9: error: expected expression at end of input
  153 |         } else
      |         ^
./samples/SAFE/__tmp_cc9c26e6.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cc9c26e6.c:153:9: error: expected declaration or statement at end of input
